--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2,7 +2,7 @@
   --color-text-primary: #002324;
   --color-text-secondary: #fff;
   --color-primary: #6608c5;
-  --bg-color-secondary: ;
+  --color-secondary: #fff;
 }
 
 /* styles reset */
@@ -20,11 +20,66 @@ ul {
   margin: 0;
   list-style-type: none;
 }
+
+h2 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 1.4;
+  text-align: center;
+}
+
 /* end of styles reset */
+
+/* buttons */
+.button {
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 10px 12px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: all 0.2s ease-in-out;
+}
+
+.button-primary {
+  color: var(--color-primary);
+  border: 2px solid var(--color-primary);
+}
+
+.button-primary:hover {
+  color: var(--color-secondary);
+  background-color: var(--color-primary);
+}
+
+.button-secondary {
+  color: var(--color-secondary);
+  border: 2px solid var(--color-secondary);
+}
+
+.button-secondary:hover {
+  color: var(--color-primary);
+  background-color: var(--color-secondary);
+}
+
+.button-tertiary {
+  color: var(--color-secondary);
+  background-color: var(--color-primary);
+  border: 2px solid var(--color-primary);
+}
+
+.button-tertiary:hover {
+  color: var(--color-primary);
+  background-color: var(--color-secondary);
+}
+
+.button-medium {
+  padding: 15px 20px;
+}
+
+/* end of buttons */
 
 .header {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -47,14 +102,17 @@ ul {
 }
 
 .about {
+  padding: 30px 0;
   color: var(--color-text-secondary);
   background-color: var(--color-primary);
 }
 
-.about-content {
-  display: flex;
-  max-width: 960px;
-  margin: 0 auto;
+@media (min-width: 992px) {
+  .about-content {
+    display: flex;
+    max-width: 960px;
+    margin: 0 auto;
+  }
 }
 
 .about-img {
@@ -62,21 +120,83 @@ ul {
   max-width: 400px;
 }
 
-.button {
-  display: inline-block;
-  font-size: 14px;
-  font-weight: 500;
-  padding: 15px 20px;
-  text-decoration: none;
-  border-radius: 5px;
+.about-description {
+  margin-left: 30px;
 }
 
-.button-primary {
-  color: var(--color-primary);
-  border: 2px solid var(--color-primary);
+.about-quote {
+  text-align: center;
 }
 
-.button-primary:hover {
+.project-img {
+  width: 100%;
+  max-width: 400px;
+  margin-left: 30px;
+}
+
+@media (min-width: 992px) {
+  .projects-article {
+    display: flex;
+    max-width: 960px;
+    margin: 0 auto;
+  }
+}
+
+.contact {
+  padding: 30px 0;
   color: var(--color-text-secondary);
   background-color: var(--color-primary);
+  text-align: center;
+}
+
+.footer {
+  padding: 30px 0;
+  color: var(--color-text-secondary);
+  background-color: var(--color-text-primary);
+}
+
+.social-table {
+  display: flex;
+  flex: auto;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+}
+
+.social-link {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  background-size: 35px;
+  background-repeat: no-repeat;
+  background-color: white;
+  border-radius: 50%;
+}
+
+.github {
+  background-image: url(../../assets/icons/icon-github.png);
+}
+
+.linkedin {
+  background-image: url(../../assets/icons/icon-linkedin.png);
+}
+
+.instagram {
+  background-image: url(../../assets/icons/icon-instagram.png);
+}
+
+.facebook {
+  background-image: url(../../assets/icons/icon-facebook.png);
+}
+
+li {
+  display: inline;
+}
+
+.port-design {
+  color: var(--color-text-secondary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
