--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,11 +1,45 @@
-:root {
-  --color-text-primary: #002324;
-  --color-text-secondary: #fff;
-  --color-primary: #6608c5;
-  --color-secondary: #fff;
+.button {
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 10px 12px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: all 0.2s ease-in-out;
 }
 
-/* styles reset */
+.button-primary {
+  color: #6608c5;
+  border: 2px solid #6608c5;
+}
+.button-primary:hover {
+  color: #fff;
+  background-color: #6608c5;
+}
+
+.button-secondary {
+  color: #fff;
+  border: 2px solid #fff;
+}
+.button-secondary:hover {
+  color: #6608c5;
+  background-color: #fff;
+}
+
+.button-tertiary {
+  color: #fff;
+  background-color: #6608c5;
+  border: 2px solid #6608c5;
+}
+.button-tertiary:hover {
+  color: #6608c5;
+  background-color: #fff;
+}
+
+.button-medium {
+  padding: 15px 20px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -28,181 +62,108 @@ h2 {
   text-align: center;
 }
 
-/* end of styles reset */
-
-/* buttons */
-.button {
-  display: inline-block;
-  font-size: 14px;
-  font-weight: 500;
-  padding: 10px 12px;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: all 0.2s ease-in-out;
-}
-
-.button-primary {
-  color: var(--color-primary);
-  border: 2px solid var(--color-primary);
-}
-
-.button-primary:hover {
-  color: var(--color-secondary);
-  background-color: var(--color-primary);
-}
-
-.button-secondary {
-  color: var(--color-secondary);
-  border: 2px solid var(--color-secondary);
-}
-
-.button-secondary:hover {
-  color: var(--color-primary);
-  background-color: var(--color-secondary);
-}
-
-.button-tertiary {
-  color: var(--color-secondary);
-  background-color: var(--color-primary);
-  border: 2px solid var(--color-primary);
-}
-
-.button-tertiary:hover {
-  color: var(--color-primary);
-  background-color: var(--color-secondary);
-}
-
-.button-medium {
-  padding: 15px 20px;
-}
-
-/* end of buttons */
-
 .header {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
-
-.header-content {
+.header .header-content {
   text-align: center;
   /* max-width: 856px; */
 }
-
-.header-title {
+.header .header-title {
   font-size: 48px;
   font-weight: 500;
   line-height: 1.4;
-  color: var(--color-text-primary);
+  color: #002324;
 }
-
-.header-title span {
-  color: var(--color-primary);
+.header .header-title span {
+  color: #6608c5;
 }
 
 .about {
   padding: 30px 0;
-  color: var(--color-text-secondary);
-  background-color: var(--color-primary);
+  color: #fff;
+  background-color: #6608c5;
 }
-
 @media (min-width: 992px) {
-  .about-content {
+  .about .about-content {
     display: flex;
     max-width: 960px;
     margin: 0 auto;
   }
 }
-
-.about-img {
+.about .about-img {
   width: 100%;
   max-width: 400px;
 }
-
-.about-description {
+.about .about-description {
   margin-left: 30px;
 }
-
-.about-quote {
+.about .about-quote {
   text-align: center;
 }
 
-.project-img {
+.projects .project-img {
   width: 100%;
   max-width: 400px;
-  margin-bottom: 50px;
 }
-
+.projects .projects-article {
+  padding: 30px 15px;
+}
+.projects .projects-article .button-primary {
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+.projects .projects-article h3 {
+  font-weight: 500;
+}
 @media (min-width: 992px) {
-  .projects-article {
+  .projects .projects-article {
     display: flex;
     max-width: 960px;
     margin: 0 auto;
-  }
-}
-
-@media (min-width: 992px) {
-  .projects-box {
-    padding: 0 30px 30px;
   }
 }
 
 .contact {
   padding: 10px 0 30px;
-  color: var(--color-text-secondary);
-  background-color: var(--color-primary);
+  color: #fff;
+  background-color: #6608c5;
   text-align: center;
 }
 
 .footer {
   padding: 30px 0;
-  color: var(--color-text-secondary);
-  background-color: var(--color-text-primary);
+  color: #fff;
+  background-color: #002324;
+  text-align: center;
 }
-
-.social-table {
-  display: flex;
-  flex: auto;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  align-content: center;
-  justify-content: center;
-}
-
-.social-link {
+.footer .social-item {
   display: inline-block;
-  width: 35px;
-  height: 35px;
-  background-size: 35px;
-  background-repeat: no-repeat;
-  background-color: white;
+  background-color: #fff;
   border-radius: 50%;
+  padding: 5px;
 }
-
-.github {
+.footer .social-link {
+  display: block;
+  width: 30px;
+  height: 30px;
+  background-size: 30px;
+  background-repeat: no-repeat;
+}
+.footer .github {
   background-image: url(../../assets/icons/icon-github.png);
 }
-
-.linkedin {
+.footer .linkedin {
   background-image: url(../../assets/icons/icon-linkedin.png);
 }
-
-.instagram {
+.footer .instagram {
   background-image: url(../../assets/icons/icon-instagram.png);
 }
-
-.facebook {
+.footer .facebook {
   background-image: url(../../assets/icons/icon-facebook.png);
 }
 
-li {
-  display: inline;
-}
-
-.port-design {
-  color: var(--color-text-secondary);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+/*# sourceMappingURL=index.css.map */
