--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -84,6 +84,7 @@ h2 {
 
 .about {
   padding: 30px 0;
+  position: relative;
   color: #fff;
   background-color: #6608c5;
 }
@@ -99,18 +100,33 @@ h2 {
   max-width: 400px;
 }
 .about .about-description {
-  margin-left: 30px;
+  margin: 0 30px;
 }
 .about .about-quote {
   text-align: center;
 }
-
-.projects .project-img {
+.about::after {
+  content: "";
+  position: absolute;
+  display: block;
   width: 100%;
+  height: 100%;
+  background: #6608c5;
+  clip-path: polygon(0% 1%, 100% 0%, 100% 7%, 0% 26%);
+}
+
+.projects {
+  padding: 150px 0;
+}
+.projects .project-img {
+  width: 100vh;
   max-width: 400px;
 }
 .projects .projects-article {
-  padding: 30px 15px;
+  padding: 0 30px 30px;
+}
+.projects .projects-article .projects-box {
+  margin-right: 25px;
 }
 .projects .projects-article .button-primary {
   margin-right: 15px;
@@ -128,10 +144,21 @@ h2 {
 }
 
 .contact {
-  padding: 10px 0 30px;
+  position: relative;
+  padding: 10px 0 40px 0;
   color: #fff;
   background-color: #6608c5;
   text-align: center;
+}
+.contact::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: #6608c5;
+  clip-path: polygon(100% 0%, 0% 35%, 100% 35%);
+  top: -80px;
 }
 
 .footer {
