--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -27,6 +27,7 @@
 
 .about {
   padding: 30px 0;
+  position: relative;
   color: $color-text-secondary;
   background-color: $color-primary;
 
@@ -44,23 +45,38 @@
   }
 
   .about-description {
-    margin-left: 30px;
+    margin: 0 30px;
   }
 
   .about-quote {
     text-align: center;
   }
+
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: $color-primary;
+    clip-path: polygon(0% 1%, 100% 0%, 100% 7%, 0% 26%);
+  }
 }
 
 .projects {
+  padding: 150px 0;
+
   .project-img {
-    width: 100%;
+    width: 100vh;
     max-width: 400px;
   }
 
   .projects-article {
-    padding: 30px 15px;
+    padding: 0 30px 30px;
 
+    .projects-box {
+      margin-right: 25px;
+    }
     .button-primary {
       margin-right: 15px;
       margin-bottom: 15px;
@@ -79,10 +95,22 @@
 }
 
 .contact {
-  padding: 10px 0 30px;
+  position: relative;
+  padding: 10px 0 40px 0;
   color: $color-text-secondary;
   background-color: $color-primary;
   text-align: center;
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: #6608c5;
+    clip-path: polygon(100% 0%, 0% 35%, 100% 35%);
+    top: -80px;
+  }
 }
 
 .footer {
