--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -69,10 +69,11 @@
   .project-img {
     width: 100vh;
     max-width: 400px;
+    margin-left: 30px;
   }
 
   .projects-article {
-    padding: 0 30px 30px;
+    padding-bottom: 30px;
 
     .projects-box {
       margin-right: 25px;
