--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -1,6 +1,30 @@
 @import "variables";
 @import "buttons";
-@import "styles";
+
+/* styles reset */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+h2 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 1.4;
+  text-align: center;
+}
+
+/* end of styles reset */
 
 .header {
   display: flex;
@@ -66,18 +90,9 @@
 .projects {
   padding: 150px 0;
 
-  .project-img {
-    width: 100vh;
-    max-width: 400px;
-    margin-left: 30px;
-  }
-
   .projects-article {
-    padding-bottom: 30px;
+    padding: 30px 15px;
 
-    .projects-box {
-      margin-right: 25px;
-    }
     .button-primary {
       margin-right: 15px;
       margin-bottom: 15px;
@@ -91,6 +106,12 @@
       display: flex;
       max-width: 960px;
       margin: 0 auto;
+    }
+
+    .projects-img {
+      width: 100%;
+      max-width: 495px;
+      border-radius: 5px;
     }
   }
 }
