--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -40,7 +40,6 @@
   padding: 15px 20px;
 }
 
-/* styles reset */
 * {
   box-sizing: border-box;
 }
@@ -63,7 +62,6 @@ h2 {
   text-align: center;
 }
 
-/* end of styles reset */
 .header {
   display: flex;
   justify-content: center;
@@ -99,7 +97,7 @@ h2 {
 }
 .about .about-img {
   width: 100%;
-  max-width: 400px;
+  max-width: 450px;
 }
 .about .about-description {
   margin: 0 30px;
@@ -107,10 +105,9 @@ h2 {
 .about .about-quote {
   text-align: center;
 }
-.about::after {
+.about:after {
   content: "";
   position: absolute;
-  display: block;
   width: 100%;
   height: 100%;
   background: #6608c5;
@@ -118,7 +115,7 @@ h2 {
 }
 
 .projects {
-  padding: 150px 0;
+  padding: 140px 0;
 }
 .projects .projects-article {
   padding: 30px 15px;
@@ -137,7 +134,7 @@ h2 {
     margin: 0 auto;
   }
 }
-.projects .projects-article .projects-img {
+.projects .projects-img {
   width: 100%;
   max-width: 495px;
   border-radius: 5px;
@@ -150,7 +147,7 @@ h2 {
   background-color: #6608c5;
   text-align: center;
 }
-.contact::before {
+.contact:before {
   content: "";
   position: absolute;
   display: block;
@@ -158,7 +155,7 @@ h2 {
   height: 100%;
   background: #6608c5;
   clip-path: polygon(100% 0%, 0% 35%, 100% 35%);
-  top: -80px;
+  bottom: 81px;
 }
 
 .footer {
