--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -1,30 +1,6 @@
 @import "variables";
 @import "buttons";
-
-/* styles reset */
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-  margin: 0;
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-
-h2 {
-  font-size: 32px;
-  font-weight: 500;
-  line-height: 1.4;
-  text-align: center;
-}
-
-/* end of styles reset */
+@import "reset";
 
 .header {
   display: flex;
@@ -65,7 +41,7 @@ h2 {
 
   .about-img {
     width: 100%;
-    max-width: 400px;
+    max-width: 450px;
   }
 
   .about-description {
@@ -76,10 +52,9 @@ h2 {
     text-align: center;
   }
 
-  &::after {
+  &:after {
     content: "";
     position: absolute;
-    display: block;
     width: 100%;
     height: 100%;
     background: $color-primary;
@@ -88,7 +63,7 @@ h2 {
 }
 
 .projects {
-  padding: 150px 0;
+  padding: 140px 0;
 
   .projects-article {
     padding: 30px 15px;
@@ -107,12 +82,12 @@ h2 {
       max-width: 960px;
       margin: 0 auto;
     }
+  }
 
-    .projects-img {
-      width: 100%;
-      max-width: 495px;
-      border-radius: 5px;
-    }
+  .projects-img {
+    width: 100%;
+    max-width: 495px;
+    border-radius: 5px;
   }
 }
 
@@ -123,7 +98,7 @@ h2 {
   background-color: $color-primary;
   text-align: center;
 
-  &::before {
+  &:before {
     content: "";
     position: absolute;
     display: block;
@@ -131,7 +106,7 @@ h2 {
     height: 100%;
     background: #6608c5;
     clip-path: polygon(100% 0%, 0% 35%, 100% 35%);
-    top: -80px;
+    bottom: 81px;
   }
 }
 
