--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -105,7 +105,7 @@ h2 {
 .about .about-quote {
   text-align: center;
 }
-.about:after {
+.about::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -147,7 +147,7 @@ h2 {
   background-color: #6608c5;
   text-align: center;
 }
-.contact:before {
+.contact::before {
   content: "";
   position: absolute;
   display: block;
