change buttons, quote and header's background

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -15,15 +15,18 @@
 .button-primary:hover {
   color: #fff;
   background-color: #6608c5;
+  transform: scale(1.2);
 }
 
 .button-secondary {
-  color: #fff;
-  border: 2px solid #fff;
+  color: #6608c5;
+  background-color: #fff;
+  border: 2px solid;
 }
 .button-secondary:hover {
   color: #6608c5;
   background-color: #fff;
+  transform: scale(1.2);
 }
 
 .button-tertiary {
@@ -34,6 +37,7 @@
 .button-tertiary:hover {
   color: #6608c5;
   background-color: #fff;
+  transform: scale(1.2);
 }
 
 .button-medium {
@@ -67,6 +71,7 @@ h2 {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background: linear-gradient(90deg, #e5ccfe, transparent);
 }
 .header .header-content {
   text-align: center;
@@ -98,12 +103,20 @@ h2 {
 .about .about-img {
   width: 100%;
   max-width: 450px;
+  border-radius: 5px;
 }
 .about .about-description {
   margin: 0 30px;
 }
 .about .about-quote {
+  color: #fff;
   text-align: center;
+  border: 10px double #fff;
+  width: 500px;
+  margin: 30px auto 0;
+  padding: 0 5px 15px;
+  box-shadow: 0px 0px 5px;
+  border-radius: 5px;
 }
 .about::after {
   content: "";
@@ -163,6 +176,7 @@ h2 {
   color: #fff;
   background-color: #002324;
   text-align: center;
+  font-size: small;
 }
 .footer .social-item {
   display: inline-block;
