--- a/styles/scss/_buttons.scss
+++ b/styles/scss/_buttons.scss
@@ -15,16 +15,19 @@
   &:hover {
     color: $color-secondary;
     background-color: $color-primary;
+    transform: scale(01.2);
   }
 }
 
 .button-secondary {
-  color: $color-secondary;
-  border: 2px solid $color-secondary;
+  color: $color-primary;
+  background-color: $color-secondary;
+  border: 2px solid;
 
   &:hover {
     color: $color-primary;
     background-color: $color-secondary;
+    transform: scale(1.2);
   }
 }
 
@@ -36,6 +39,7 @@
   &:hover {
     color: $color-primary;
     background-color: $color-secondary;
+    transform: scale(1.2);
   }
 }
 
