--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background: linear-gradient(90deg, $background-color-primary, transparent);
 
   .header-content {
     text-align: center;
@@ -42,6 +43,7 @@
   .about-img {
     width: 100%;
     max-width: 450px;
+    border-radius: 5px;
   }
 
   .about-description {
@@ -49,7 +51,14 @@
   }
 
   .about-quote {
+    color: $color-secondary;
     text-align: center;
+    border: 10px double $color-secondary;
+    width: 500px;
+    margin: 30px auto 0;
+    padding: 0 5px 15px;
+    box-shadow: 0px 0px 5px;
+    border-radius: 5px;
   }
 
   &::after {
@@ -115,6 +124,7 @@
   color: $color-text-secondary;
   background-color: $color-text-primary;
   text-align: center;
+  font-size: small;
 
   .social-item {
     display: inline-block;
