--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -54,7 +54,7 @@
     color: $color-secondary;
     text-align: center;
     border: 10px double $color-secondary;
-    width: 500px;
+    max-width: 420px;
     margin: 30px auto 0;
     padding: 0 5px 15px;
     box-shadow: 0px 0px 5px;
@@ -114,7 +114,7 @@
     width: 100%;
     height: 100%;
     background: #6608c5;
-    clip-path: polygon(100% 0%, 0% 35%, 100% 35%);
+    clip-path: polygon(100% 0%, -10% 35%, 100% 35%);
     bottom: 81px;
   }
 }
