--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -112,7 +112,7 @@ h2 {
   color: #fff;
   text-align: center;
   border: 10px double #fff;
-  max-width: 420px;
+  max-width: 415px;
   margin: 30px auto 0;
   padding: 0 5px 15px;
   box-shadow: 0px 0px 5px;
@@ -155,7 +155,7 @@ h2 {
 
 .contact {
   position: relative;
-  padding: 10px 0 40px 0;
+  padding: 10px 10px 40px 10px;
   color: #fff;
   background-color: #6608c5;
   text-align: center;
@@ -167,7 +167,7 @@ h2 {
   width: 100%;
   height: 100%;
   background: #6608c5;
-  clip-path: polygon(100% 0%, -10% 35%, 100% 35%);
+  clip-path: polygon(100% 0%, 0% 36%, 100% 35%);
   bottom: 81px;
 }
 
