--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -112,7 +112,7 @@ h2 {
   color: #fff;
   text-align: center;
   border: 10px double #fff;
-  max-width: 415px;
+  max-width: 360px;
   margin: 30px auto 0;
   padding: 0 5px 15px;
   box-shadow: 0px 0px 5px;
@@ -121,14 +121,17 @@ h2 {
 .about::after {
   content: "";
   position: absolute;
+  display: block;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  left: 0;
+  right: 0;
   background: #6608c5;
-  clip-path: polygon(0% 1%, 100% 0%, 100% 7%, 0% 26%);
+  clip-path: polygon(0vmax 0vmax, 0vmax 15vmax, 150vmax 0vmax);
 }
 
 .projects {
-  padding: 140px 0;
+  padding: 200px 0 0;
 }
 .projects .projects-article {
   padding: 30px 15px;
@@ -152,23 +155,21 @@ h2 {
   max-width: 495px;
   border-radius: 5px;
 }
+.projects .polygon-after {
+  clip-path: polygon(100% 40%, 0% 100%, 100% 100%);
+  position: relative;
+  height: 200px;
+  left: 0;
+  right: 0;
+  background: #6608c5;
+}
 
 .contact {
-  position: relative;
-  padding: 10px 10px 40px 10px;
+  padding: 5px 10px 55px 10px;
+  margin: 0 auto;
   color: #fff;
   background-color: #6608c5;
   text-align: center;
-}
-.contact::before {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: #6608c5;
-  clip-path: polygon(100% 0%, 0% 36%, 100% 35%);
-  bottom: 81px;
 }
 
 .footer {
