--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -54,7 +54,7 @@
     color: $color-secondary;
     text-align: center;
     border: 10px double $color-secondary;
-    max-width: 415px;
+    max-width: 360px;
     margin: 30px auto 0;
     padding: 0 5px 15px;
     box-shadow: 0px 0px 5px;
@@ -64,15 +64,18 @@
   &::after {
     content: "";
     position: absolute;
+    display: block;
     width: 100%;
-    height: 100%;
-    background: $color-primary;
-    clip-path: polygon(0% 1%, 100% 0%, 100% 7%, 0% 26%);
+    height: 100vh;
+    left: 0;
+    right: 0;
+    background: #6608c5;
+    clip-path: polygon(0vmax 0vmax, 0vmax 15vmax, 150vmax 0vmax);
   }
 }
 
 .projects {
-  padding: 140px 0;
+  padding: 200px 0 0;
 
   .projects-article {
     padding: 30px 15px;
@@ -98,25 +101,23 @@
     max-width: 495px;
     border-radius: 5px;
   }
+
+  .polygon-after {
+    clip-path: polygon(100% 40%, 0% 100%, 100% 100%);
+    position: relative;
+    height: 200px;
+    left: 0;
+    right: 0;
+    background: #6608c5;
+  }
 }
 
 .contact {
-  position: relative;
-  padding: 10px 10px 40px 10px;
+  padding: 5px 10px 55px 10px;
+  margin: 0 auto;
   color: $color-text-secondary;
   background-color: $color-primary;
   text-align: center;
-
-  &::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 100%;
-    background: #6608c5;
-    clip-path: polygon(100% 0%, 0% 36%, 100% 35%);
-    bottom: 81px;
-  }
 }
 
 .footer {
