--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -120,14 +120,14 @@ h2 {
 }
 .about::after {
   content: "";
+  clip-path: polygon(0vmax 0vmax, 0vmax 15vmax, 150vmax 0vmax);
+  background: #6608c5;
   position: absolute;
   display: block;
   width: 100%;
-  height: 100vh;
+  height: 200px;
   left: 0;
   right: 0;
-  background: #6608c5;
-  clip-path: polygon(0vmax 0vmax, 0vmax 15vmax, 150vmax 0vmax);
 }
 
 .projects {
