--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -57,7 +57,7 @@
     max-width: 360px;
     margin: 30px auto 0;
     padding: 0 5px 15px;
-    box-shadow: 0px 0px 5px;
+    box-shadow: 0px 0px 2px;
     border-radius: 5px;
   }
 
@@ -101,7 +101,7 @@
     border-radius: 5px;
   }
 
-  .polygon-after {
+  .second-polygon {
     clip-path: polygon(100% 40%, 0% 100%, 100% 100%);
     position: relative;
     height: 200px;
