--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -2,5 +2,5 @@ $color-text-primary: #002324;
 $color-text-secondary: #fff;
 $color-primary: #6608c5;
 $color-secondary: #fff;
-$color-tertiary: #e3d4f2;
+$color-tertiary: #f6edfe;
 $background-color-primary: #e5ccfe;
